<resources>
    <string name="app_name">Face500mg</string>
    <string name="add_a_customer">Add a customer</string>
    <string name="personal_info">Please enter the customers personal information</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="please_enter_mobile_number">Please enter mobile number</string>
    <string name="please_enter_valid_email">Please enter valid email</string>
    <string name="please_enter_address">please enter Ref Id</string>
    <string name="search_by_photo">Search by photo</string>
    <string name="search_photo_decp">Please make sure your face is straight to your phone</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="match_found">Match found</string>
    <string name="matching_img">We have found some images matching with your face.</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up_decp">Please fill the required credentials below and proceed</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="forgot_password"> Forgot Password</string>
    <string name="please_enter_username">Plaese enter valid username</string>
    <string name="please_enter_password">please enter password</string>
    <string name="please_enter_last">Please enter the last name</string>
    <string name="selfie">Selfie</string>

</resources>